--- a/lang/it.json
+++ b/lang/it.json
@@ -334,7 +334,9 @@
 			"softLockRevMap_controls_name": "Mappa revisioni sincronizzazione controlli BBMM",
 			"softLockRevMap_controls_hint": "Memorizza quale valore di blocco leggero dei controlli è stato applicato per ultimo",
 			"moduleNotes_name": "Note moduli BBMM",
-			"moduleNotes_hint": "Note aggiunte ai moduli."
+			"moduleNotes_hint": "Note aggiunte ai moduli.",
+			"moduleLocksName": "Moduli Bloccati",
+			"moduleLocksHint": "I moduli elencati qui sono bloccati in BBMM e non possono essere abilitati o disabilitati (manualmente o tramite azioni in blocco)."
 		},
 		"macro": {
   			"columnName": "Nome",
@@ -382,6 +384,54 @@
   			"titleKeybindInspecor": "BBMM — Ispeziona comandi da tastiera",
   			"keybindFilterPlaceholder": "Cerca spazio nomi, azione, nome, suggerimento, tasti…",
   			"selectPreset": "Seleziona un preset di impostazioni."
+		},
+		"moduleManagement": {
+			"modListWindowTitle": "BBMM — Gestore Moduli",
+  			"filterModules": "Filtra Moduli",
+  			"allModules": "Tutti i Moduli",
+  			"activeModules": "Moduli Attivi",
+  			"inactiveModules": "Moduli Inattivi",
+  			"enable": "Attiva",
+  			"disable": "Disattiva",
+  			"enabled": "Attivato",
+  			"disabled": "Disattivato",
+  			"noResults": "Nessun modulo corrispondente.",
+  			"dependencies": "Dipendenze",
+  			"conflicts": "Conflitti",
+  			"recommendations": "Raccomandati",
+  			"deactivateAll": "Disattiva Tutti i Moduli",
+  			"activateAll": "Attiva Tutti i Moduli",
+  			"findTheCulprit": "Trova il Responsabile!",
+ 			"saveModuleSettings": "Salva Impostazioni Moduli",
+  			"noChanges": "Nessuna modifica da applicare.",
+  			"depsTitle": "Attiva Dipendenze Necessarie",
+  			"depsPrompt": "Il modulo che hai attivato richiede i seguenti moduli. Attivarli?",
+  			"disableDependentsTitle": "Disattiva Moduli Dipendenti",
+  			"disableDependentsPrompt": "Il modulo che stai disattivando è richiesto dai seguenti moduli. Disattivarli?",
+  			"disableOrphansTitle": "Disattiva Dipendenze Non Necessarie",
+  			"disableOrphansPrompt": "Il modulo che stai disattivando ha moduli richiesti che non sono più necessari da altri. Disattivarli?",
+  			"reloadRequiredTitle": "Ricaricamento Necessario",
+  			"reloadMessage": "La configurazione dei moduli è stata aggiornata. Ricaricare ora per applicare?",
+  			"reloadNow": "Ricarica Ora",
+  			"reloadLater": "Ricarica Dopo",
+  			"reloadLaterNotice": "BBMM: Modifiche salvate. Ricarica per applicare.",
+  			"saveFailed": "BBMM: Impossibile salvare la configurazione dei moduli.",
+  			"settingBtnToolTip": "Apre il Gestore Moduli BBMM (Shift-clic per il core)",
+  			"lockLock": "Blocca modulo",
+  			"lockUnlock": "Sblocca modulo",
+  			"lockBlocked": "Questo modulo è bloccato e non può essere modificato.",
+  			"tagCompendia": "Compendi",
+  			"tagLocalization": "Localizzazione",
+  			"compatVerified": "Verificato",
+  			"compatNotVerified": "Non Verificato",
+  			"compatMatchesCore": "Corrisponde al core",
+  			"compatModuleExpects1": "Il modulo richiede ≥",
+  			"compatModuleExpects2": "il core è",
+  			"compatMinVer": "Minima/Verificata",
+  			"compatibility": "Compatibilità",
+  			"disableDependentsPromptMulti": "Disattivare i seguenti moduli che dipendono da questo? Deseleziona quelli che vuoi mantenere attivi:",
+  			"disableOrphansPromptMulti": "Questi moduli non sono più necessari. Disattivarli? Deseleziona quelli che vuoi mantenere attivi:",
+  			"filterClear": "Pulisci filtro"
 		}
 	}
 }
